--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,22 +1,22 @@
 <div class="container">
-    <h3>Sobre nós</h3>
+    <h3 class="center">Sobre nós</h3>
 </div>
 
 <div class="row no-margin fs-16">
-    <div class="col s12 l6 grey darken-3" style="padding: 20px;">
-        <p class="amber-text">Fundado em 2014, um novo modelo de negócio e de conceito de treinamento. Um ambiente moderno, completo, que visa a promoção da qualidade de vida a partir de treinos que prezam por eficiência e segurança, sem nunca perder o foco em resultados.</p>
+    <div class="col s12 l6" style="padding: 20px;">
+        <p class="center">Fundado em 2014, um novo modelo de negócio e de conceito de treinamento. Um ambiente moderno, completo, que visa a promoção da qualidade de vida a partir de treinos que prezam por eficiência e segurança, sem nunca perder o foco em resultados.</p>
     </div>
     <div class="col s12 l6 img-bg-cover" style="background: url(assets/img/sobre-nos-1.jpg); background-size: cover; height: 350px;"></div>
 </div>
 <div class="row no-margin fs-16">
-    <div class="col s12 l6 amber" style="padding: 20px;">
-        <p class="white-text">Nossos clientes são homens e mulheres que, independente da idade, desejam um estilo de vida, não para impressionar outros, mas em primeiro lugar, querem o bem estar, viver sem dores, com disposição para aproveitar a vida na companhia de quem ama.</p>
+    <div class="col s12 l6" style="padding: 20px;">
+        <p class="center">Nossos clientes são homens e mulheres que, independente da idade, desejam um estilo de vida, não para impressionar outros, mas em primeiro lugar, querem o bem estar, viver sem dores, com disposição para aproveitar a vida na companhia de quem ama.</p>
     </div>
     <div class="col s12 l6 img-bg-cover" style="background: url(assets/img/sobre-nos-2.jpg); background-size: cover; height: 350px;"></div>
 </div>
 <div class="row no-margin fs-16">
-    <div class="col s12 l6 grey darken-3" style="padding: 20px;">
-        <p class="amber-text">Nossos treinos são personalizados, respeitando a individualidade do aluno e prezando pela otimização do tempo x eficiência, sempre indo além do objetivo do aluno, que normalmente envolve apenas a perda de gordura e definição muscular. Nossa meta é torná-lo apto para todas as atividades do dia a dia.</p>
+    <div class="col s12 l6" style="padding: 20px;">
+        <p class="center">Nossos treinos são personalizados, respeitando a individualidade do aluno e prezando pela otimização do tempo x eficiência, sempre indo além do objetivo do aluno, que normalmente envolve apenas a perda de gordura e definição muscular. Nossa meta é torná-lo apto para todas as atividades do dia a dia.</p>
     </div>
     <div class="col s12 l6 img-bg-cover" style="background: url(assets/img/sobre-nos-3.jpg); background-size: cover; height: 350px;"></div>
 </div>
@@ -59,4 +59,14 @@
     <div class="carousel-item white-text" href="#one!">
         <img src="assets/img/sobre-nos-13.jpg">
     </div>
+</div>
+
+<!--   Icon Section   -->
+<div class="row block-1">
+	<div class="col s12 amber center-align">
+		<div class="icon-block" style="padding-bottom: 30px;">
+			<h3 class="white-text center-align" style="margin-bottom: 20px">Enjoy <br>a free trial</h3>
+			<a class="btn white amber-text" href="#">FREE 7 DAYS TRIAL</a>
+		</div>
+	</div>
 </div>
