--- a/templates/views/gallery.hbs
+++ b/templates/views/gallery.hbs
@@ -1,13 +1,11 @@
 <div class="container">
-	<h1>Gallery</h1>
+	<h1>Galeria</h1>
 </div>
 <div class="container">
 	<!-- if galleries -->
 	{{#if galleries}}
 		{{#each galleries}}
-		<h2>{{name}}
-			<div class="pull-right text-muted">19th May 2014</div>
-		</h2>
+		<h2>{{name}}</h2>
 		<div class="row gallery-images">
 				{{#if heroImage}}
 				<div class="col-sm-4 col-md-4 gallery-image">
