Ajustes de layout

--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,3 +1,11 @@
+<div class="row">
+    <div class="col s12 m6 push-m6 l4 push-l4">
+        <div style="padding: 30px 0; text-align: center;">
+            <img src="/assets/img/logo-fitness-o2.png" class="responsive-img">
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <h3 class="center">Sobre nós</h3>
 </div>
@@ -9,10 +17,10 @@
     <div class="col s12 l6 img-bg-cover" style="background: url(assets/img/sobre-nos-1.jpg); background-size: cover; height: 350px;"></div>
 </div>
 <div class="row no-margin fs-16">
-    <div class="col s12 l6" style="padding: 20px;">
+    <div class="col s12 l6 push-l6" style="padding: 20px;">
         <p class="center">Nossos clientes são homens e mulheres que, independente da idade, desejam um estilo de vida, não para impressionar outros, mas em primeiro lugar, querem o bem estar, viver sem dores, com disposição para aproveitar a vida na companhia de quem ama.</p>
     </div>
-    <div class="col s12 l6 img-bg-cover" style="background: url(assets/img/sobre-nos-2.jpg); background-size: cover; height: 350px;"></div>
+    <div class="col s12 l6 pull-l6 img-bg-cover" style="background: url(assets/img/sobre-nos-2.jpg); background-size: cover; height: 350px;"></div>
 </div>
 <div class="row no-margin fs-16">
     <div class="col s12 l6" style="padding: 20px;">
@@ -62,7 +70,7 @@
 </div>
 
 <!--   Icon Section   -->
-<div class="row block-1">
+<div class="row block-1 no-margin">
 	<div class="col s12 amber center-align">
 		<div class="icon-block" style="padding-bottom: 30px;">
 			<h3 class="white-text center-align" style="margin-bottom: 20px">Enjoy <br>a free trial</h3>
