--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,11 @@
+<div class="row">
+	<div class="col s12 m6 push-m6 l4 push-l4">
+		<div style="padding: 30px 0; text-align: center;">
+			<img src="/assets/img/logo-fitness-o2.png" class="responsive-img">
+		</div>
+	</div>
+</div>
+
 <!--   Icon Section   -->
 <div class="row block-1">
 	<div class="col s12 m6 grey darken-3">
