--- a/src/app/sobre-nos/sobre-nos.component.css
+++ b/src/app/sobre-nos/sobre-nos.component.css
@@ -4,3 +4,10 @@
 .fs-16 {
   font-size: 16px;
 }
+.icon-block h3 {
+    font-size: 48px;
+    line-height: 1em;
+    font-family: "Poppins";
+    font-weight: 700;
+    text-transform: uppercase;
+}
