--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s12 m6 push-m6 l4 push-l4">
+    <div class="col s12 m6 push-m3 l4 push-l4">
         <div style="padding: 30px 0; text-align: center;">
             <img src="/assets/img/logo-fitness-o2.png" class="responsive-img">
         </div>
@@ -11,22 +11,38 @@
 </div>
 
 <div class="row no-margin fs-16">
-    <div class="col s12 l6" style="padding: 20px;">
-        <p class="center">Fundado em 2014, um novo modelo de negócio e de conceito de treinamento. Um ambiente moderno, completo, que visa a promoção da qualidade de vida a partir de treinos que prezam por eficiência e segurança, sem nunca perder o foco em resultados.</p>
+    <div class="col s12" style="padding: 20px;">
+        <p class="center">Fundado em 2014, em São José dos Campos/SP, o Studio O2 Fitness apresenta um novo modelo de negócio e de conceito de treinamento.
+        Um ambiente moderno, completo, que visa a promoção da qualidade de vida a partir de treinos que aliam eficiência e segurança,
+        sem perder o foco em resultados.</p>
+        <p class="center">Nossos alunos são homens e mulheres que, independentemente da idade, buscam um estilo de vida mais saudável; querem o bem-estar,
+        viver sem dores, com disposição para aproveitar a vida na companhia da família e entes queridos.</p>
+        <p class="center">Oferecemos treinos personalizados, respeitando a individualidade, o que garante resultados mais eficazes em menos tempo,
+        sempre indo além do objetivo do aluno, que normalmente envolve apenas a diminuição do peso e a definição muscular. Nossa
+        meta é torná-lo apto para todas as atividades do dia a dia.</p>
+        <p class="center">O plano de trabalho acontece em uma relação de parceria onde a busca de resultados passa a ser uma tarefa conjunta. Comemora-se
+        cada pequena vitória da mesma forma que há o apoio e a motivação para superar as dificuldades.</p>
+        <p class="center">Trabalhamos para ajudar o aluno a apaixonar-se por si mesmo, oferecendo além da atividade física, orientação sobre hábitos
+        alimentares e estilo de vida, para que o treino seja um aliado em uma trajetória de mudança de comportamento em prol de uma
+        vida mais saudável.</p>
+
+        <h3 class="center">MISSÃO</h3>
+        <p class="center">Oferecer um novo conceito de treinamento físico, onde o atendimento personalizado possibilita o conhecimento do indivíduo
+        e de suas necessidades, possibilitando a criação de planos de trabalho onde os objetivos sejam atingidos de forma mais assertiva
+        e em menos tempo.</p>
+
+        <h3 class="center">VISÃO</h3>
+        <p class="center">Ser reconhecido como um dos melhores centros de treinamento personalizado do Vale do Paraíba, sendo referência para quem
+        busca a melhora na qualidade de vida e o ganho de condicionamento físico, através do atendimento de qualidade, oferecido
+        por bons profissionais, com segurança e respeitando os limites de cada um.</p>
+
+        <h3 class="center">VALORES</h3>
+        <p class="center">RESPEITO ao indivíduo e às suas limitações;</p>
+        <p class="center">ÉTICA ao orientar e oferecer o melhor treinamento personalizado possível;</p>
+        <p class="center">SOLIDEZ nas ações e tratativas para construir uma história de sucesso e ser referência na área de treinamento físico;</p>
+        <p class="center">EMPREENDEDORISMO na busca de novas ideias e objetivos para manter a empresa em constante evolução.</p>
+        <p class="center">UNIÃO como objetivo maior, fazendo com que a busca de todos os alunos tenha o único objetivo: mais saúde e qualidade de vida.</p>
     </div>
-    <div class="col s12 l6 img-bg-cover" style="background: url(assets/img/sobre-nos-1.jpg); background-size: cover; height: 350px;"></div>
-</div>
-<div class="row no-margin fs-16">
-    <div class="col s12 l6 push-l6" style="padding: 20px;">
-        <p class="center">Nossos clientes são homens e mulheres que, independente da idade, desejam um estilo de vida, não para impressionar outros, mas em primeiro lugar, querem o bem estar, viver sem dores, com disposição para aproveitar a vida na companhia de quem ama.</p>
-    </div>
-    <div class="col s12 l6 pull-l6 img-bg-cover" style="background: url(assets/img/sobre-nos-2.jpg); background-size: cover; height: 350px;"></div>
-</div>
-<div class="row no-margin fs-16">
-    <div class="col s12 l6" style="padding: 20px;">
-        <p class="center">Nossos treinos são personalizados, respeitando a individualidade do aluno e prezando pela otimização do tempo x eficiência, sempre indo além do objetivo do aluno, que normalmente envolve apenas a perda de gordura e definição muscular. Nossa meta é torná-lo apto para todas as atividades do dia a dia.</p>
-    </div>
-    <div class="col s12 l6 img-bg-cover" style="background: url(assets/img/sobre-nos-3.jpg); background-size: cover; height: 350px;"></div>
 </div>
 
 <div 
