--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,27 @@
-.block-1 .icon-block {
-  padding: 80px 0;
+.icon-block {
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  display: flex;
 }
-.icon-block h3 {
+.icon-block div {
   font-size: 48px;
   line-height: 1em;
   font-family: "Poppins";
   font-weight: 700;
   text-transform: uppercase;
+}
+.fs28 {
+  font-size: 28px !important;
+}
+.abstract-who-we-are, .depoimentos {
+  font-size: 16px;
+  padding: 0 20px; 
+  text-align: center;
+}
+.depoimentos img {
+  border-radius: 50%; 
+  width: 100px;
 }
 .row {
   margin-bottom: 0;
